# minerva

./: .editorconfig  .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
data/: business_types.yaml  ck3_traits.yaml  ds_business_types.yaml  ds_occupation_types.yaml  feminine_japanese_names.txt  japanese_city_names.txt  japanese_surnames.txt  maryland_settlement_names.txt  masculine_japanese_names.txt  occupation_types.yaml  relationship_traits.yaml  skills_types.yaml  species_types.yaml
docs/: agent-behavior-systems.md  finding-emergent-stories.md  key-systems.md  random-event-system.md  simulation-rules.md  the-character-lifecycle.md  world-generation.md
samples/: ck3_traits.py  family_banner_generation.py  got.py  house_of_the_dragon.py  shogun.py  war_system.py
samples/data/: english_first_names.tracery.json  got_house_names.tracery.json  got_seat_names.tracery.json  male_japanese_first_names.tracery.json
samples/data_analysis/: .gitignore  anomaly_model.py  feature_extraction.py  generate_data.py  process_mining.py  run_detection.py  train_anomaly_detector.py
src/minerva/: __init__.py  action.py  config.py  constants.py  content_selection.py  datetime.py  ecs.py  engine.py  event_emitter.py  inspection.py  loaders.py  sim_db.py  simulation.py  simulation_events.py  systems.py
src/minerva/actions/: actions.py  base_types.py  behavior_helpers.py  behaviors.py  considerations.py  preconditions.py  scheme_helpers.py  scheme_types.py  selection_strategies.py  sensors.py
src/minerva/businesses/: data.py
src/minerva/characters/: betrothal_data.py  betrothal_helpers.py  components.py  helpers.py  metric_data.py  motive_helpers.py  stat_helpers.py  succession_helpers.py  war_data.py  war_helpers.py
src/minerva/data/: ck3_traits.py  female_japanese_first_names.tracery.json  japanese_city_names.py  japanese_city_names.tracery.json  japanese_names.py  japanese_surnames.tracery.json
src/minerva/effects/: base_types.py  effects.py
src/minerva/life_events/: aging.py  base_types.py  events.py  succession.py
src/minerva/pcg/: base_types.py  character.py  settlement.py  territory_pcg.py  text_gen.py  world_map.py
src/minerva/preconditions/: base_types.py  preconditions.py
src/minerva/relationships/: base_types.py  helpers.py  preconditions.py  social_rules.py
src/minerva/settlements/: base_types.py  helpers.py
src/minerva/stats/: base_types.py  helpers.py
src/minerva/traits/: base_types.py  effects.py  helpers.py
src/minerva/viz/: camera.py  constants.py  family_banners.py  game.py  game_events.py  settings.py  tile_sprites.py  utils.py  wiki.py
src/minerva/viz/resources/templates/: character.jinja  character_list.jinja  clan.jinja  clan_list.jinja  family.jinja  family_list.jinja  index.jinja  settlement.jinja  settlement_list.jinja  territory.jinja  territory_list.jinja
src/minerva/world_map/: components.py  helpers.py
tests/: test_alliance_helpers.py  test_betrothal_helpers.py  test_character_helpers.py  test_clan_helpers.py  test_content_selection.py  test_datetime.py  test_dynasty.py  test_dynasty_helpers.py  test_family_helpers.py  test_stats.py  test_succession.py  test_traits.py  test_war_helpers.py
(+1 files in other folders)
